# vector-db-book

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml  tags.json
.github/workflows/: deploy.yml
api-reference/: index.html
appendices/: index.html
appendices/bibliography/: index.html
appendices/comparison-matrix/: index.html
appendices/glossary/: index.html
appendices/math-reference/: index.html
docs/: api-reference.md  index.md
docs/appendices/: bibliography.md  comparison-matrix.md  glossary.md  index.md  math-reference.md
docs/javascripts/: mathjax.js
docs/part-1-foundations/: ann-algorithms.md  data-ingestion.md  high-dimensional-geometry.md  index-storage-tradeoffs.md  index.md  query-semantics.md  quickstart.md
docs/part-2-architecture/: core-components.md  distributed-stores.md  hardware-acceleration.md  hybrid-search.md  index.md  observability-operations.md  realtime-updates.md  storage-engines.md
docs/part-3-implementation/: benchmark-harness.md  elastic-scaling.md  hnsw-rust.md  index.md  pq-ivf-gpu.md  transactional-schemes.md
docs/part-4-advanced/: advanced-open-source-dbs.md  continual-online-learning.md  future-directions.md  in-database-ml-and-feature-stores.md  index.md  privacy-preserving-search.md  (+2 more)
part-1-foundations/: index.html
part-2-architecture/: index.html
part-3-implementation/: index.html
part-4-advanced/: index.html
search/: search_index.json
src/cpp/db/: CMakeLists.txt  arrow_batch.hpp  iceberg_store.hpp  test_vector_db  test_vector_db.cpp  vector_db.hpp
(+33 files in other folders)
